<resources>
    <string name="app_name">NS1.0</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="aceptar">Aceptar</string>
    <string name="repcontrasena">Repetir Contraseña</string>
    <string name="correo">Correo</string>
    <string name="perfil">Perfil</string>
    <string name="mCerrar">Cerrar Sesión</string>
    <string name="salir">Salir</string>
    <string name="principal">Principal</string>
    <string name="donar"> ¿Donde Donar ? </string>
    <string name="citas">Citas</string>
    <string name="recomendaciones">Recomendaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="general">Información General</string>
    <string name="home">Home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nombre">Nombre</string>
    <string name="ultimad">Ultima Donación</string>
    <string name="tipos">Tipo de Sangre</string>
    <string name="direccion">Dirección</string>
    <string name="control">Control</string>
    <string name="title_activity_nav_d">NavD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cedula">Cédula</string>
    <string name="edad">Edad</string>
    <string name="genero">Genero</string>
    <string name="antecedentes">Antecedentes</string>
    <string name="imc">Peso</string>
    <string name="presion">Presion</string>
    <string name="anadir">Añadir</string>
    <string name="guardar">Guardar</string>
</resources>
